template/static/styles/site.spacelab.css
/* ... */
.btn-default:hover {
  background-image: -webkit-linear-gradient(#636565, #3d3f3f 50%, #333434);
  background-image: -o-linear-gradient(#636565, #3d3f3f 50%, #333434);
  background-image: linear-gradient(#636565, #3d3f3f 50%, #333434);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff636565', endColorstr='#ff333434', GradientType=0);
  filter: none;
  border: 1px solid #242525;
}
.btn-primary {
  background-image: -webkit-linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
  background-image: -o-linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
  background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d94bf', endColorstr='#ff3e648d', GradientType=0);
  filter: none;
  border: 1px solid #345578;
}
.btn-primary:hover {
  background-image: -webkit-linear-gradient(#5f8ab9, #3e648d 50%, #385a7f);
  background-image: -o-linear-gradient(#5f8ab9, #3e648d 50%, #385a7f);
  background-image: linear-gradient(#5f8ab9, #3e648d 50%, #385a7f);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5f8ab9', endColorstr='#ff385a7f', GradientType=0);
  filter: none;
  border: 1px solid #2e4b69;
}
.btn-success {
  background-image: -webkit-linear-gradient(#61dd45, #3cb521 50%, #36a41e);
  background-image: -o-linear-gradient(#61dd45, #3cb521 50%, #36a41e);
  background-image: linear-gradient(#61dd45, #3cb521 50%, #36a41e);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff61dd45', endColorstr='#ff36a41e', GradientType=0);
  filter: none;
  border: 1px solid #2e8a19;
}
.btn-success:hover {
  background-image: -webkit-linear-gradient(#52da34, #36a41e 50%, #31921b);
  background-image: -o-linear-gradient(#52da34, #36a41e 50%, #31921b);
  background-image: linear-gradient(#52da34, #36a41e 50%, #31921b);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff52da34', endColorstr='#ff31921b', GradientType=0);
  filter: none;
  border: 1px solid #287916;
}
.btn-info {
  background-image: -webkit-linear-gradient(#7bbdf7, #3399f3 50%, #208ff2);
  background-image: -o-linear-gradient(#7bbdf7, #3399f3 50%, #208ff2);
  background-image: linear-gradient(#7bbdf7, #3399f3 50%, #208ff2);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7bbdf7', endColorstr='#ff208ff2', GradientType=0);
  filter: none;
  border: 1px solid #0e80e5;
}
.btn-info:hover {
  background-image: -webkit-linear-gradient(#68b3f6, #208ff2 50%, #0e86ef);
  background-image: -o-linear-gradient(#68b3f6, #208ff2 50%, #0e86ef);
  background-image: linear-gradient(#68b3f6, #208ff2 50%, #0e86ef);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff68b3f6', endColorstr='#ff0e86ef', GradientType=0);
  filter: none;
  border: 1px solid #0c75d2;
}
.btn-warning {
  background-image: -webkit-linear-gradient(#ff9c21, #d47500 50%, #c06a00);
  background-image: -o-linear-gradient(#ff9c21, #d47500 50%, #c06a00);
  background-image: linear-gradient(#ff9c21, #d47500 50%, #c06a00);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff9c21', endColorstr='#ffc06a00', GradientType=0);
  filter: none;
  border: 1px solid #a15900;
}
.btn-warning:hover {
  background-image: -webkit-linear-gradient(#ff930d, #c06a00 50%, #ab5e00);
  background-image: -o-linear-gradient(#ff930d, #c06a00 50%, #ab5e00);
  background-image: linear-gradient(#ff930d, #c06a00 50%, #ab5e00);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff930d', endColorstr='#ffab5e00', GradientType=0);
  filter: none;
  border: 1px solid #8d4e00;
}
.btn-danger {
  background-image: -webkit-linear-gradient(#ff1d1b, #cd0200 50%, #b90200);
  background-image: -o-linear-gradient(#ff1d1b, #cd0200 50%, #b90200);
  background-image: linear-gradient(#ff1d1b, #cd0200 50%, #b90200);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff1d1b', endColorstr='#ffb90200', GradientType=0);
  filter: none;
  border: 1px solid #9a0200;
}
.btn-danger:hover {
  background-image: -webkit-linear-gradient(#ff0906, #b90200 50%, #a40200);
  background-image: -o-linear-gradient(#ff0906, #b90200 50%, #a40200);
  background-image: linear-gradient(#ff0906, #b90200 50%, #a40200);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff0906', endColorstr='#ffa40200', GradientType=0);
  filter: none;
  border: 1px solid #860100;
}
.btn:active,
.btn.active {
  background-image: none;
  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
}
.panel-primary .panel-title {
  color: #fff;
}
#main {
  margin-top: 62px;
  margin-left: 200px;
}
.navbar-fixed-top .navbar-inner {
  padding-left: 20px;
  padding-right: 20px;
}
.navbar.navbar-inverse .dropdown-menu {
  padding: 20px;
  max-height: 300px;
  overflow: auto;
  width: 300px;
  background-color: #446e9b;
}
.navbar.navbar-inverse .dropdown-menu a,
.navbar.navbar-inverse .dropdown-menu a:visited {
  color: #dddddd;
}
.navbar.navbar-inverse .dropdown-menu a:hover {
  color: #ffffff;
  background-color: transparent;
}
.navbar.navbar-inverse .dropdown-menu a:active {
  color: #ffffff;
  background-color: transparent;
}
.navbar.navbar-inverse .dropdown-menu a {
  padding-left: 0;
  padding-right: 5px;
  font-weight: 500;
  font-size: 115%;
}
img.branding-logo {
  max-height: 30px;
  display: inline-block;
  padding: 0px;
  margin: -3px 5px 0 0;
}
/* ... */

